docs(docker): align container build and runtime guidance